--- a/dev/django-k8s/docker-compose.yaml
+++ b/dev/django-k8s/docker-compose.yaml
@@ -1,22 +1,22 @@
 version: "3.3"
 services:
   
-  # web:
-  #   depends_on:
-  #     - postgres_db
-  #   build:
-  #     context: ./web
-  #     dockerfile: Dockerfile
-  #   image: django-k8s:v1
-  #   environment:
-  #     - PORT=8020
-  #   env_file:
-  #     - web/.env
-  #   ports:
-  #     - "8020:8020"
-  #   command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh"
-  #   # volumes:
-  #   #   - statifiles:/app/statifiles/ 
+  web:
+    depends_on:
+      - postgres_db
+    build:
+      context: ./web
+      dockerfile: Dockerfile
+    image: django-k8s:v1
+    environment:
+      - PORT=8020
+    env_file:
+      - web/.env
+    ports:
+      - "8020:8020"
+    command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh"
+    volumes:
+      - statifiles:/app/statifiles/ 
   
   postgres_db:
     image: postgres
@@ -43,7 +43,7 @@ services:
     entrypoint: redis-server --appendonly yes --port 6388
 
 volumes:
-  # statifiles:
-  #   external: true
+  statifiles:
+    external: true
   postgres_data:
   redis_data:
