--- a/dev/django-k8s/k8s/nginx/deployment.yaml
+++ b/dev/django-k8s/k8s/nginx/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: nginx-deployment
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: nginx-deployment
@@ -13,6 +14,6 @@ spec:
     spec:
       containers:
         - name: nginx-container
-          iamge: nginx:latest
+          image: nginx:latest
           ports:
             - containerPort: 80
