--- a/dev/django-k8s/web/.env
+++ b/dev/django-k8s/web/.env
@@ -9,8 +9,8 @@ POSTGRES_READY=0
 POSTGRES_DB=dockerdc
 POSTGRES_PASSWORD=mysecretpassword
 POSTGRES_USER=myuser
-POSTGRES_HOST=postgres_db
-POSTGRES_PORT=5434
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 
 REDIS_HOST=redis_db
 REDIS_PORT=6388
