ssl mode change of .env and settings.py

--- a/dev/django-k8s/web/.env
+++ b/dev/django-k8s/web/.env
@@ -5,6 +5,7 @@ DJANGO_SUPERUSER_PASSWORD=mydjangopw
 DJANGO_SUERPUSER_EMAIL=przemaj1990@gmail.com
 DJANGO_SECRET_KEY=1j9*q=8275dm#qxv8^iz#debt@dk57cpk9&7xk%us^&^s(02g5
 
+DB_IGNORE_SSL=true
 POSTGRES_READY=0
 POSTGRES_DB=dockerdc
 POSTGRES_PASSWORD=mysecretpassword
