--- a/dev/django-k8s/web/.env
+++ b/dev/django-k8s/web/.env
@@ -5,15 +5,16 @@ DJANGO_SUPERUSER_PASSWORD=mydjangopw
 DJANGO_SUERPUSER_EMAIL=przemaj1990@gmail.com
 DJANGO_SECRET_KEY=1j9*q=8275dm#qxv8^iz#debt@dk57cpk9&7xk%us^&^s(02g5
 
-ENV_ALLOW_HOST=*
+ENV_ALLOW_HOST="*"
 
 DB_IGNORE_SSL=true
 POSTGRES_READY=0
 POSTGRES_DB=dockerdc
 POSTGRES_PASSWORD=mysecretpassword
 POSTGRES_USER=myuser
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
+
 
 REDIS_HOST=redis_db
 REDIS_PORT=6388
