--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,10 +10,11 @@ on:
     branches: [ main ]
 
 jobs:
-  test_django:
+  test_django_job:
     uses: przemaj1990/djnago-k8s/.github/workflows/test-django.yaml@main
   docker_build:
     runs-on: ubuntu-latest
+    needs: [test_django_job]
     env:
       DJANGO_SECRET_KEY: test-key-not-good-maybe-make-one-better
     steps:
