--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,10 +12,19 @@ on:
 jobs:
   test_django_job:
     uses: przemaj1990/djnago-k8s/.github/workflows/test-django.yaml@main
-  docker_build:
+  build:
     runs-on: ubuntu-latest
     needs: [test_django_job]
     env:
       DJANGO_SECRET_KEY: test-key-not-good-maybe-make-one-better
     steps:
-    - uses: actions/checkout@v2
+    - name:  Checkout code.
+      uses: actions/checkout@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+  
