--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,4 +27,13 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-  
+    - name: Build container image
+      working-directory: dev/django-k8s/web
+      run: |
+        docker build -f Dockerfile \
+          -t docker.io/przemaj1990/django-k8s:latest \
+          -t docker.io/przemaj1990/django-k8s:${GITHUB_SHA::7}-${GITHUB_RUN_ID::5} \
+          .
+    - name: Push image
+      run: |
+        docker push docker.io/przemaj1990/django-k8s --all-tags
