--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,9 +39,8 @@ jobs:
       run: |
         docker push docker.io/przemaj1990/django-k8s --all-tags
     - name: Setup kubectl
-      uses: justin0u0/setup-kubectl@v1
+      uses: myrotvorets/kubectl-action@2.0.0
       with:
-        kubectl-version: stable
-        cluster-certificate-authority-data: ${{ secrets.KUBERNETES_CLUSTER_CLIENT_CERTIFICATE_AUTHORITY_DATA }}
-        cluster-server: ${{ secrets.KUBERNETES_CLUSTER_SERVER }}
-        credentials-token: ${{ secrets.KUBERNETES_CREDENTIALS_TOKEN }}
+        config: ${{ secrets.KUBE_CONFIG_DATA }}
+        version: latest
+        args: kubectl apply -f /home/cloud_user/Projects/Djnago-on-k8s/djnago-k8s/dev/django-k8s/k8s/apps/django-k8s-web.yaml
