connection between github-action and kubernetes

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,13 +29,16 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Get short SHA
-      run: echo "SHORT_SHA=$("${{ github.sha }}".SubString(0, 8))" >> $env:GITHUB_ENV
+      uses: benjlevesque/short-sha@v2.1
+      id: short-sha
+      with:
+        length: 6
     - name: Build container image
       working-directory: dev/django-k8s/web
       run: |
         docker build -f Dockerfile \
           -t docker.io/przemaj1990/django-k8s:latest \
-          -t docker.io/przemaj1990/django-k8s:${{ env.SHORT_SHA }} \
+          -t docker.io/przemaj1990/django-k8s:${{ steps.short-sha.outputs.sha }} \
           .
     - name: Push image
       run: |
@@ -51,7 +54,7 @@ jobs:
       with:
         config: ${{ secrets.KUBE_CONFIG_DATA }}
         version: latest
-        args: --insecure-skip-tls-verify set image deployment/django-k8s-web-deployment django-k8s-web=docker.io/przemaj1990/django-k8s:${{ env.SHORT_SHA }}
+        args: --insecure-skip-tls-verify set image deployment/django-k8s-web-deployment django-k8s-web=docker.io/przemaj1990/django-k8s:${{ steps.short-sha.outputs.sha }}
     - name: Wait for rollout to finish
       uses: myrotvorets/kubectl-action@2.0.0
       with:
