--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -67,3 +67,6 @@ jobs:
         config: ${{ secrets.KUBE_CONFIG_DATA }}
         version: latest
         args: --insecure-skip-tls-verify exec -it $(kubectl get pod -l=app=django-k8s-web-deployment -o NAME | tail -n 1) -- bash /app/migrate.sh
+        continue-on-error: true
+        run: |
+          exit 1
