--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -68,11 +68,7 @@ jobs:
         version: latest
         args: --insecure-skip-tls-verify rollout status deployment/django-k8s-web-deployment
     - name: Run Migration
-      uses: myrotvorets/kubectl-action@2.0.0
+      uses: tale/kubectl-action@v1
       with:
-        config: ${{ secrets.KUBE_CONFIG_DATA }}
-        version: latest
-        args: --insecure-skip-tls-verify exec -it $(kubectl get pod -l=app=django-k8s-web-deployment -o NAME | tail -n 1) -- bash /app/migrate.sh
-        continue-on-error: true
-        run: |
-          exit 1
+        base64-kube-config: ${{ secrets.KUBE_CONFIG_DATA }}
+        run: --insecure-skip-tls-verify exec -it $(kubectl get pod -l=app=django-k8s-web-deployment -o NAME | tail -n 1) -- bash /app/migrate.sh
