--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,12 +49,31 @@ jobs:
         config: ${{ secrets.KUBE_CONFIG_DATA }}
         version: latest
         args: --insecure-skip-tls-verify get pods
-    # - name: Update Deployment Secrets
-    #   uses: myrotvorets/kubectl-action@2.0.0
-    #   with:
-    #     config: ${{ secrets.KUBE_CONFIG_DATA }}
-    #     version: latest
-    #     args: --insecure-skip-tls-verify get pods
+    - name: Update secrets
+      uses: tale/kubectl-action@v1
+      with:
+        base64-kube-config: ${{ secrets.KUBE_CONFIG_DATA }}
+        run: |
+          cat << EOF >> dev/django-k8s/web/.env
+          DEBUG=1
+          REGION=texas
+          DJANGO_SUPERUSER_USERNAME=admin
+          DJANGO_SUPERUSER_PASSWORD=mydjangopw
+          DJANGO_SUERPUSER_EMAIL=przemaj1990@gmail.com
+          DJANGO_SECRET_KEY=1j9*q=8275dm#qxv8^iz#debt@dk57cpk9&7xk%us^&^s(02g5
+
+          ENV_ALLOW_HOST="*"
+
+          DB_IGNORE_SSL=true
+          POSTGRES_READY=0
+          POSTGRES_DB=dockerdc
+          POSTGRES_PASSWORD=mysecretpassword
+          POSTGRES_USER=myuser
+          POSTGRES_HOST=postgres
+          POSTGRES_PORT=5432
+          EOF
+          kubectl delete secret django-k8s-web-prod-env
+          kubectl create secret generic django-k8s-web-prod-env --from-env-file=dev/django-k8s/web/.env
     - name: Update Deployemnt Image
       uses: myrotvorets/kubectl-action@2.0.0
       with:
