--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,34 +44,35 @@ jobs:
       run: |
         docker push docker.io/przemaj1990/django-k8s --all-tags
     - name: test conntection to k8s
-      uses: myrotvorets/kubectl-action@2.0.0
+      uses: tale/kubectl-action@v1
       with:
         config: ${{ secrets.KUBE_CONFIG_DATA }}
         version: latest
-        args: --insecure-skip-tls-verify get pods
-    - name: Update secrets
-      uses: tale/kubectl-action@v1
-      with:
-        base64-kube-config: ${{ secrets.KUBE_CONFIG_DATA }}
-        run: |
-          cat << EOF >> dev/django-k8s/web/.env
-          DEBUG=1
-          REGION=texas
-          DJANGO_SUPERUSER_USERNAME=admin
-          DJANGO_SUPERUSER_PASSWORD=mydjangopw
-          DJANGO_SUERPUSER_EMAIL=przemaj1990@gmail.com
-          DJANGO_SECRET_KEY=1j9*q=8275dm#qxv8^iz#debt@dk57cpk9&7xk%us^&^s(02g5
-          ENV_ALLOW_HOST="*"
-          DB_IGNORE_SSL=true
-          POSTGRES_READY=0
-          POSTGRES_DB=dockerdc
-          POSTGRES_PASSWORD=mysecretpassword
-          POSTGRES_USER=myuser
-          POSTGRES_HOST=postgres
-          POSTGRES_PORT=5432
-          EOF
-          kubectl delete secret django-k8s-web-prod-env
-          kubectl create secret generic django-k8s-web-prod-env --from-env-file=dev/django-k8s/web/.env
+        run: kubectl --insecure-skip-tls-verify get pods
+    # - name: Update secrets
+    #   uses: tale/kubectl-action@v1
+    #   with:
+    #     base64-kube-config: ${{ secrets.KUBE_CONFIG_DATA }}
+    #     run: |
+    #       cat << EOF >> dev/django-k8s/web/.env
+    #       DEBUG=1
+    #       REGION=texas
+    #       DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}
+    #       DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}
+    #       DJANGO_SUERPUSER_EMAIL=${{ secrets.DJANGO_SUERPUSER_EMAIL }}
+    #       DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}
+    #       ENV_ALLOW_HOST=${{ secrets.ENV_ALLOW_HOST }}
+    #       DB_IGNORE_SSL=t${{ secrets.DB_IGNORE_SSL }}rue
+    #       POSTGRES_READY=${{ secrets.POSTGRES_READY }}
+    #       POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+    #       POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+    #       POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+    #       POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}
+    #       POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}
+    #       EOF
+    #       less dev/django-k8s/web/.env
+    #       kubectl delete secret django-k8s-web-prod-env
+    #       kubectl create secret generic django-k8s-web-prod-env --from-env-file=dev/django-k8s/web/.env
     - name: Update Deployemnt Image
       uses: myrotvorets/kubectl-action@2.0.0
       with:
@@ -85,7 +86,7 @@ jobs:
         version: latest
         args: --insecure-skip-tls-verify rollout status deployment/django-k8s-web-deployment
     - name: Run Migration
-      uses: tale/kubectl-action@v1
+      uses: myrotvorets/kubectl-action@2.0.0
       with:
         base64-kube-config: ${{ secrets.KUBE_CONFIG_DATA }}
         run: --insecure-skip-tls-verify exec -it $(kubectl get pod -l app=django-k8s-web-deployment -o NAME | tail -n 1) -- bash /app/migrate.sh
