--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,7 +47,6 @@ jobs:
       uses: tale/kubectl-action@v1
       with:
         config: ${{ secrets.KUBE_CONFIG_DATA }}
-        version: latest
         run: kubectl --insecure-skip-tls-verify get pods
     # - name: Update secrets
     #   uses: tale/kubectl-action@v1
@@ -88,5 +87,6 @@ jobs:
     - name: Run Migration
       uses: myrotvorets/kubectl-action@2.0.0
       with:
-        base64-kube-config: ${{ secrets.KUBE_CONFIG_DATA }}
+        config: ${{ secrets.KUBE_CONFIG_DATA }}
+        version: latest
         run: --insecure-skip-tls-verify exec -it $(kubectl get pod -l app=django-k8s-web-deployment -o NAME | tail -n 1) -- bash /app/migrate.sh
