--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,7 +45,7 @@ jobs:
         docker push docker.io/przemaj1990/django-k8s --all-tags
     - name: Update secrets
       run: |
-        cat << EOF >> dev/django-k8s/web/.env
+        cat << EOF >> dev/django-k8s/web/.env.new
         DEBUG=1
         REGION=texas
         DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}
@@ -61,7 +61,6 @@ jobs:
         POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}
         POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}
         EOF
-        less dev/django-k8s/web/.env
     - name: Update Secret 1
       uses: myrotvorets/kubectl-action@2.0.0
       with:
@@ -73,7 +72,7 @@ jobs:
       with:
         config: ${{ secrets.KUBE_CONFIG_DATA }}
         version: latest
-        args: kubectl create secret generic django-k8s-web-prod-env --from-env-file=dev/django-k8s/web/.env
+        args: kubectl create secret generic django-k8s-web-prod-env --from-env-file=dev/django-k8s/web/.env.new
     - name: Update Deployemnt Image
       uses: myrotvorets/kubectl-action@2.0.0
       with:
