connection between github-action and kubernetes

--- a/dev/django-k8s/k8s/apps/api_access_setup.yaml
+++ b/dev/django-k8s/k8s/apps/api_access_setup.yaml
@@ -40,3 +40,5 @@ metadata:
   name: github-actions
   annotations:
     kubernetes.io/service-account.name: "github-actions"
+
+# try base on: https://itnext.io/big-change-in-k8s-1-24-about-serviceaccounts-and-their-secrets-4b909a4af4e0 and similar. 
