--- a/jenkins-pipline.yaml
+++ b/jenkins-pipline.yaml
@@ -17,6 +17,8 @@ pipeline {
         }
         stage('Deploy') {
             steps {
+                input 'Does the staging environment look OK?'
+                milestone(1)
                 echo 'make publish'
             }
         }
