--- a/jenkins-pipline.yaml
+++ b/jenkins-pipline.yaml
@@ -13,14 +13,10 @@ pipeline {
                 script {
                     try {
                         sh """
-                            echo ${TEST}
                             python3 -m venv ${WORKSPACE}/.venv_${BUILD_NUMBER}
-                            echo ${TEST}2
                             echo ${WORKSPACE}/.venv_${BUILD_NUMBER}
                             . ${WORKSPACE}/.venv_${BUILD_NUMBER}/bin/activate
-                            echo ${TEST}3
                             python3 -m pip install --upgrade pip
-                            echo ${TEST}4
                             pip install --quiet -r ${WORKSPACE}/dev/django-k8s/web/requirements.txt
                         """
                         } catch (err) {
@@ -30,13 +26,24 @@ pipeline {
                     }
             }
         }
-        stage('Build') { 
+        stage('Test') { 
             steps { 
-                echo 'make' 
+                script {
+                try {
+                sh """
+                . ${WORKSPACE}/.venv_${BUILD_NUMBER}/bin/activate
+                python3 ${WORKSPACE}/dev/django-k8s/web/python manage.py test
+                """
+                }catch (err) {
+                            echo "Create virtual environment failed: ${err.getMessage()}"
+                            error('Failed to prepare virtual environment, please check logs')
+                        }
+                }
             }
         }
-        stage('Test'){
+        stage('Build?'){
             steps {
+                
                 echo 'make check'
                 echo 'reports/**/*.xml' 
             }
