--- a/jenkins-pipline.yaml
+++ b/jenkins-pipline.yaml
@@ -32,7 +32,7 @@ pipeline {
                 try {
                 sh """
                 . ${WORKSPACE}/.venv_${BUILD_NUMBER}/bin/activate
-                python3 ${WORKSPACE}/dev/django-k8s/web/python manage.py test
+                python3 ${WORKSPACE}/dev/django-k8s/web/manage.py test
                 """
                 }catch (err) {
                             echo "Create virtual environment failed: ${err.getMessage()}"
