--- a/jenkins-pipline.yaml
+++ b/jenkins-pipline.yaml
@@ -71,8 +71,8 @@ pipeline {
         }
         stage('Deploy') {
             steps {
-#                 input 'Does the staging environment look OK?'
-#                 milestone(1)
+                echo "input 'Does the staging environment look OK?'"
+                echo 'milestone(1)'
                 echo 'make publish'
             }
         }
