--- a/jenkins-pipline.yaml
+++ b/jenkins-pipline.yaml
@@ -60,7 +60,7 @@ pipeline {
                                         sourceFiles: 'dist/trainSchedule.zip',
                                         removePrefix: 'dist/',
                                         remoteDirectory: '/tmp',
-                                        execCommand: 'sudo apt update'
+                                        execCommand: 'ip a'
                                     )
                                 ]
                             )
