--- a/jenkins-pipline.yaml
+++ b/jenkins-pipline.yaml
@@ -57,8 +57,7 @@ pipeline {
                                 ], 
                                 transfers: [
                                     sshTransfer(
-                                        sourceFiles: '${WORKSPACE}/dev/django-k8s/web/requirements.txt',
-                                        removePrefix: '${WORKSPACE}/',
+                                        sourceFiles: '/**',
                                         remoteDirectory: '/tmp',
                                         execCommand: 'ip a'
                                     )
