--- a/jenkins-k8s.yaml
+++ b/jenkins-k8s.yaml
@@ -7,8 +7,14 @@ pipeline {
   stages {
     stage('Checkout Source') {
       steps {
-        git 'https://github.com/przemaj1990/djnago-k8s.git'
-      }
+            sh 'mkdir -p Module1'
+            dir("Module1")
+            {
+                git branch: "main",
+                credentialsId: 'github_api_key',
+                url: 'https://github.com/przemaj1990/djnago-k8s.git'
+            }
+        }
     }
     stage('Build image') {
       steps{
